# Onika

./: .gitignore  Cargo.toml  Makefile  Makefile.in  README.md  checkrows.py  compOnika.py  componikadashing.py  configure  configure.ac  fof.txt  fof_reads5.txt  genome1.fasta  genome2.fasta  genome3.fasta
config/: config.h  config.h.in
data/: Salmo.fa.zst  ecoli.fa.zst  fof.txt
ecoli_test/Queries/: fof.txt
ecoli_test/Refs/: fof.txt
example/output/: query_output
example/reads/: reads5.fa
example/sequences/: fof.txt  sequence1.fasta  sequence2.fasta  sequence3.fasta  sequence4.fasta  sequence5.fasta
headers/: common.h  onika_index.h  utils.h
resources/: onika.ascii
src/: Makefile.am  Makefile.in  bucket.rs  bucket_pos.rs  common.h  main.rs  onika.cpp  onika_index.cpp  onika_index.h  onika_index.rs  onika_sketch.cpp  onika_sketch.h  utils.cpp  utils.rs
